src/sass/components/_work-experience.scss
.work-experience {
  display: grid;
  grid-template-columns: 30% auto;
  gap: 4rem;

  @media (width <= 1280px) {
    grid-template-columns: 35% auto;
  }

  @media (width <= 884px) {
    grid-template-columns: 38% auto;
    gap: 2rem;
  }

  @media (width <= 640px) {
    grid-template-columns: none;
    gap: 15rem;
  }

  & a {
    transition: color 0.2s ease;

    &:hover {
      color: white;
      text-decoration: underline;
    }
  }

  & .profile {
    display: grid;
    gap: 2rem;

    &-pic {
      background:
        linear-gradient(to bottom, rgba(0, 0, 0, 0) 60%, rgb(0, 0, 0) 100%),
        url("/assets/makenedev-profile.jpeg");
      background-position: center top;
      background-size: cover;
      width: 100%;
      height: 28rem;
      border-radius: 0.3rem;

      @media (width <= 400px) {
        height: 23rem;
      }
    }

    &__content {
      display: grid;
      gap: 2.2rem;
    }

    &__header {
      &--name {
        font-size: 1.2rem;
        font-weight: 500;
      }

      &--title {
        color: var(--color-zinc-400);
      }
    }

    &__contact {
      display: grid;
      gap: 0.5rem;
    }

    &__links {
      display: flex;
      align-items: center;
      gap: 0.7rem;

      & svg {
        color: var(--color-zinc-400);
        transition: color 0.2s ease;

        &:hover {
          color: white;
        }
      }
    }

    &__resume {
      display: flex;
      align-items: center;
      justify-content: space-between;
      border: 2px solid var(--color-zinc-700);
      border-radius: 9rem;
      padding: 0.5rem 1.2rem;
      font-size: 0.8rem;
      font-weight: 500;

      @media (width <= 640px) {
        width: fit-content;
        gap: 0.67rem;
        padding: 0.5rem 1rem;
      }

      &,
      & svg {
        transition: all 0.2s ease-in;
      }

      & svg {
        color: var(--color-zinc-700);
      }

      &:hover {
        border-color: white;

        & svg {
          color: white;
        }
      }
    }
  }

  & .experiences {
    h1 {
      font-size: 1.3rem;
      font-weight: 500;
      margin-bottom: 2.5rem;

      @media (width <= 640px) {
        font-family: "Antonio", sans-serif;
        text-transform: uppercase;
        font-size: 1.9rem;
        padding-bottom: 1rem;
        border-bottom: 1px solid var(--color-zinc-600);
      }
    }

    &__timeline {
      color: var(--color-zinc-400);
      display: grid;
      gap: 2.5rem;

      & h2 {
        color: white;
        font-weight: 500;
      }

      @media (width <= 640px) {
        gap: 3rem;
      }
    }

    &__work {
      display: grid;
      gap: 0.5rem;
    }
  }
}

